engine/tests/fixtures/invalid/http-api-semantics/shape-input-export.tg
shape shape_input_export_tasks {
  name "Export Input"
  description "Export input"

  fields {
    project_id uuid optional
    callback_url text optional
  }

  status active
}
